# GP_TurboHiker

./: .gitignore  CMakeLists.txt  Flowchart.mmd  README.md  build.sh  debug.cpp  gamedata.json  main.cpp
Utils/: Random.hpp
dependencies/: CmakeLists.txt
dependencies/SFML-2.5.1-MAC/: changelog.md
dependencies/SFML-2.5.1-MAC/doc/: doxyfile.in
dependencies/SFML-2.5.1-MAC/examples/cocoa/: readme.txt
dependencies/SFML-2.5.1-MAC/examples/vulkan/: Vulkan.cpp
dependencies/SFML-2.5.1-MAC/extlibs/headers/freetype2/: ftmodapi.h
dependencies/SFML-2.5.1-MAC/extlibs/headers/stb_image/: stb_image_write.h
dependencies/SFML-2.5.1-MAC/extlibs/headers/vorbis/: vorbisenc.h
dependencies/SFML-2.5.1-MAC/include/SFML/Audio/: Listener.hpp
dependencies/SFML-2.5.1-MAC/include/SFML/Graphics/: RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  View.hpp
dependencies/SFML-2.5.1-MAC/src/SFML/Graphics/: RenderTarget.cpp
dependencies/SFML-2.5.1-MAC/src/SFML/System/: Clock.cpp
dependencies/SFML-2.5.1-MAC/src/SFML/Window/Android/: InputImpl.cpp
dependencies/SFML-2.5.1-MAC/src/SFML/Window/OSX/: SFOpenGLView.h  SFViewController.h
dependencies/SFML-2.5.1/include/SFML/Graphics/: Font.hpp  Glsl.inl  RenderStates.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Sprite.hpp  Text.hpp  Texture.hpp  VertexBuffer.hpp  View.hpp
dependencies/SFML-2.5.1/include/SFML/System/: Clock.hpp  Err.hpp  String.hpp  Thread.hpp  Time.hpp
dependencies/SFML-2.5.1/include/SFML/Window/: Context.hpp  Cursor.hpp  Event.hpp  Sensor.hpp  Window.hpp
dependencies/SFML-2.5.1/share/SFML/doc/html/: Main_8hpp_source.html  RenderStates_8hpp_source.html  RenderTarget_8hpp_source.html  View_8hpp_source.html  classsf_1_1Clock.html  classsf_1_1Context.html  classsf_1_1Cursor.html  classsf_1_1Event.html  classsf_1_1Font.html  classsf_1_1Ftp.html  classsf_1_1Ftp_1_1DirectoryResponse.html  classsf_1_1Ftp_1_1ListingResponse.html  classsf_1_1Ftp_1_1Response.html  classsf_1_1Listener.html  classsf_1_1RenderStates.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow.html  classsf_1_1Sensor.html  classsf_1_1Shader.html  classsf_1_1SocketSelector.html  classsf_1_1Sound.html  classsf_1_1SoundBuffer.html  functions_g.html  (+16 more)
dependencies/SFML-2.5.1_WIN/doc/html/: Main_8hpp_source.html  RenderStates_8hpp_source.html  RenderTarget_8hpp_source.html  View_8hpp_source.html  classsf_1_1Clock.html  classsf_1_1Context.html  classsf_1_1Cursor.html  classsf_1_1Event.html  classsf_1_1Font.html  classsf_1_1Ftp.html  classsf_1_1Ftp_1_1DirectoryResponse.html  classsf_1_1Ftp_1_1ListingResponse.html  classsf_1_1Ftp_1_1Response.html  classsf_1_1Listener.html  classsf_1_1RenderStates.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow.html  classsf_1_1Sensor.html  classsf_1_1Shader.html  classsf_1_1SocketSelector.html  classsf_1_1Sound.html  classsf_1_1SoundBuffer.html  classsf_1_1Sprite.html  classsf_1_1String.html  classsf_1_1TcpListener.html  classsf_1_1TcpSocket.html  classsf_1_1Text.html  classsf_1_1Texture.html  classsf_1_1Thread.html  classsf_1_1Time.html  classsf_1_1VertexBuffer.html  classsf_1_1View-members.html  classsf_1_1View.html  classsf_1_1Window.html  functions_func_g.html  functions_g.html  group__system.html  group__window.html  jquery.js
dependencies/SFML-2.5.1_WIN/include/SFML/Audio/: Listener.hpp
dependencies/SFML-2.5.1_WIN/include/SFML/Graphics/: RenderTarget.hpp  RenderWindow.hpp  View.hpp
dependencies/engine/engine/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cc  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  bla.shader  test.shader  text.shader
dependencies/engine/engine/freetype-2.10.0/builds/unix/: config.status  libtool
dependencies/engine/engine/freetype-2.10.0/objs/.libs/: libfreetype.so.6.17.0
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glew-2.1.0/auto/doc/: advanced.html
dependencies/glew-2.1.0/doc/: gpl.txt
dependencies/glew-2.1.0/include/GL/: glew.h
dependencies/glew/doc/: advanced.html
dependencies/glm-0.9.9.8/glm/: .gitignore  manual.md  readme.md
dependencies/glm-0.9.9.8/glm/doc/: man.doxy
dependencies/glm-0.9.9.8/glm/doc/api/: a00001_source.html  a00047_source.html  a00062.html  a00062_source.html  a00105.html  a00105_source.html  a00153_source.html  a00245.html  a00246.html  a00248.html  a00249.html  a00252.html  a00255.html  a00256.html  a00257.html  a00262.html  a00264.html  a00275.html  a00278.html  a00285.html  a00291.html  a00299.html  a00314.html  a00335.html  a00374.html  jquery.js  modules.html
dependencies/glm-0.9.9.8/glm/glm/ext/: matrix_projection.inl
libs/SFML-2.5.1_WIN/include/SFML/Graphics/: RenderTarget.hpp
recources/Textures/portal_2_textures/: README!.txt
recources/Textures/portal_2_textures/signage/indicator_lights/: indicator_lights_corner_floor.vmt  indicator_lights_corner_selfillum.vtf  indicator_lights_selfillum.vtf  indicator_lights_wall.vmt
src/: Controller.cpp  Controller.h  DisignByContract.h  Entity.cc  Entity.h  Field.cc  Field.h  Item.cc  Item.h  Lane.cc  Lane.h  MainGame.cc  MainGame.h  Obstacle.cc  Obstacle.h  Player.cpp  Player.h  Scoreboard.h  Vector3.h  Widget.cc  Widget.h
src/Utils/: Random.hpp  gltext.h  json.hpp
src/View/: Draw.cc  Draw.h
src/model/: Clock.hpp  Collectable.cpp  Collectable.h  Entity.cc  Entity.h  EntityFactory.hh  Factory.h  GameSettings.cpp  GameSettings.h  Item.h  Lane.cc  Lane.h  MainGame.cc  MainGame.h  Menu.cc  Menu.h  Model.cpp  Model.h  Obstacle.cc  Obstacle.h  Player.cpp  Player.h  PlayerFactory.hh  Scoreboard.cc  Scoreboard.h  Trigger.cpp  Trigger.h  Widget.h  World.cc  World.h  collision.cpp
src/view/: Camera.hpp  Collectable.cpp  Collectable.h  Draw.cc  Draw.h  Drawable.cpp  Drawable.hpp  Entity.cpp  Entity.h  EntityFactory.h  Factory.h  Lane.cpp  Lane.h  Menu.cpp  Menu.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Scoreboard.cpp  Scoreboard.h  Window.cpp  Window.h  World.cpp  World.h  entity.shader
