


#add_library(engine STATIC
#        ${CMAKE_CURRENT_LIST_DIR}/Shader.h ${CMAKE_CURRENT_LIST_DIR}/Shader.cpp
#        ${CMAKE_CURRENT_LIST_DIR}/Renderer.h ${CMAKE_CURRENT_LIST_DIR}/Renderer.cpp
#        ${CMAKE_CURRENT_LIST_DIR}/VertexBuffer.h ${CMAKE_CURRENT_LIST_DIR}/VertexBuffer.cpp
#        ${CMAKE_CURRENT_LIST_DIR}/IndexBuffer.h ${CMAKE_CURRENT_LIST_DIR}/IndexBuffer.cpp
#        ${CMAKE_CURRENT_LIST_DIR}/VertexArray.h ${CMAKE_CURRENT_LIST_DIR}/VertexArray.cpp
#        ${CMAKE_CURRENT_LIST_DIR}/VertexBufferLayout.h
#        ${CMAKE_CURRENT_LIST_DIR}/Texture.h ${CMAKE_CURRENT_LIST_DIR}/Texture.cpp  )

